--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,13 @@ html, body {
 }
 
 body {
+  background-color: #181818;
+  color: #f0f0f0;
   margin: 0;
-  width: 100%;
-  min-height: 100vh;
-  position: relative;
+  padding: 0;
+  font-family: Arial, sans-serif;
 }
+
 
 #root {
   width: 100%;
